# py_voice

./: README.md  docker-compose.yml
.circleci/: config.yml
app/: Dockerfile  app.py  pyproject.toml
