[tool.poetry]
name = "Py Voice"
version = "0.1.0"
description = "WIP"

authors = ["im"]

[tool.poetry.dependencies]
python = "^3.6.12"

PyAudio = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-watch = "*"

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.masonry.api"
